# Warsztaty-Badawcze-II

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  good_command.txt  pyproject.toml  tmp.ipynb
configs/: config.yaml
configs/acquisition/: maxvar.yaml
configs/dataset/: default.yaml
configs/experiment/: default.yaml
configs/hydra/: default.yaml
configs/metric/: default.yaml  reconstruction.yaml
configs/model/: default.yaml  siren.yaml
slurm/: SLURM_script.sh  resource_logger.py  run_experiment.sh
src/: main.py
src/acquisition/: base.py  maxvar.py
src/dataset/: base.py  maze.py
src/experiment/: run.py
src/logger/: base.py  wandb.py
src/metric/: base.py  reconstruction.py
src/model/: base.py  siren.py
src/utils/: __init__.py  hydra.py  training.py  wandb.py
